Bug#30025 Mysqld prints out warnings/errors being run with --no-defaults --help         now do no initializations for the --help.         Do it for --verbose --help though.

per-file comments:
  sql/mysqld.cc
Bug#30025 Mysqld prints out warnings/errors being run with --no-defaults --help
        quit with the help message at once as --help was given